Dockerfile.scratch ssl file add fix
Builder Docker Image Version Fix

--- a/go-auth/Dockerfile.scratch
+++ b/go-auth/Dockerfile.scratch
@@ -1,6 +1,6 @@
 FROM scratch
 
-ADD ca-certificates.crt /etc/ssl/certs/
+ADD /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 ADD ./go-auth /bin/go-auth
 
