Docker Scratch Commented SSL Certificates File Line

--- a/go-auth/Dockerfile.scratch
+++ b/go-auth/Dockerfile.scratch
@@ -2,8 +2,8 @@ FROM scratch
 
 MAINTAINER ugurozsahin@live.com
 
-RUN mkdir -p /etc/ssl/certs
-ADD etc/certs/ca-certificates.crt /etc/ssl/certs/
+#RUN mkdir -p /etc/ssl/certs
+#ADD /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 ADD ./go-auth /bin/go-auth
 
